fix:scrollbar

--- a/src/Components/BeerList/BeerList.css
+++ b/src/Components/BeerList/BeerList.css
@@ -26,7 +26,7 @@
 }
 ::-webkit-scrollbar {
   width: 2px;
-  height: 2px;
+  height: 8px;
 }
 ::-webkit-scrollbar-button {
   width: 0px;
@@ -38,10 +38,10 @@
   border-radius: 50px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #ffffff;
+  background: #d6d6d6;
 }
 ::-webkit-scrollbar-thumb:active {
-  background: #000000;
+  background: #ffffff;
 }
 ::-webkit-scrollbar-track {
   background: #666666;
